Ghost/templates/yaml/ghost-deployment.yaml
# Namespace for Ghost and MySQL resources
apiVersion: v1
kind: Namespace
metadata:
  name: ghost

---

# Ghost Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: "image"
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: ghost-content
          mountPath: /var/lib/ghost/content
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: ghost-content
        persistentVolumeClaim:
          claimName: ghost-pvc
---

# Service for Ghost
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
  namespace: ghost
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
  type: ClusterIP

---

# StatefulSet for MySQL
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 700m
            memory: 1Gi
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc


---

# Service for MySQL
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: ghost
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306

---

# Ingress for Ghost using Azure Application Gateway
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/request-timeout: "30"
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - dgghostapp.ichp-tech.info
    secretName: ghost-tls-secret  # Ensure this secret exists
  rules:
  - host: dgghostapp.ichp-tech.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost-service
            port:
              number: 2368
